----------
v1.1.2-git
----------



------
v1.1.1
------

[mjr] Fix fatal error due to botched merge.


------
v1.1.0
------

[mjr] Fix creating tags from folder names when importing bookmarks.


---------
v1.1.0RC1
---------

[jan] Add Hungarian translation (Andras Galos <galosa@netinform.hu>).
[jan] Add Danish translation (Erling Preben Hansen <erling@eph.dk>).
[mjr] Add support for importing bookmarks from Mozilla's JSON format.


------
v1.0.3
------

[mjr] Fix some minor issues with crawling bookmarks.
[mjr] Show recently used tags on-demand (Bug #11712).


------
v1.0.2
------

[jan] Fix fatal errors in portal blocks (Bug #12303).


------
v1.0.1
------

[jan] Make Horde_Queue a mandatory dependency.


------
v1.0.0
------

[cjh] Strip utm_ parameters from incoming bookmarks, and provide a script to
      strip them from already-saved bookmarks (Request #10751).
[cjh] Implement listTagInfo and searchTags API calls for Trean (Bug #11816).
[cjh] Fix fetching, saving, and display of favicons.


-----------
v1.0.0beta2
-----------

[cjh] Add a list of tags to the sidebar.
[cjh] Crawl all bookmarks when they are saved or edited for fulltext searching
      if elasticsearch is available.
[cjh] Turn search off by default (Bug #11701).
[jan] Allow to set custom SQL parameters.
[jan] Move search box to top menu.


-----------
v1.0.0beta1
-----------

[jan] Merge tag browser into bookmark listing.
[mjr] Add tagging support.
[cjh] Remove folders.
[cjh] Remove star ratings.
[jan] Provide default configuration files instead of .dist versions.
[jan] Enable output compression (horde@albasoft.com, Bug #8649).
[cjh] Check folder name as well as id for the pre-selected folder
      (Duck <duck@obala.net>, Bug #7627).
[jan] Add Turkish translation (METU <horde-tr@metu.edu.tr>).
[cjh] Add Latvian translation (Janis <je@ktf.rtu.lv>).
[cjh] Support for Firefox plugin that shows Trean bookmarks in the browser
      (joey@joeyhewitt.com, Request #2565).