@@ -33,7 +33,11 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
  <notes>
-* 
+* [jan] Update Italian translation.
+* [jan] Update German translation.
+* [jan] Update Hungarian translation.
+* [mjr] Fix shebang (after install) for trean scripts (Remi Collet &lt;fedora@famillecollet.com&gt;).
+* [mjr] Use the favicon when returning tag search results via the API if possible.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -705,7 +709,11 @@
    <date>2014-07-09</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
-* 
+* [jan] Update Italian translation.
+* [jan] Update German translation.
+* [jan] Update Hungarian translation.
+* [mjr] Fix shebang (after install) for trean scripts (Remi Collet &lt;fedora@famillecollet.com&gt;).
+* [mjr] Use the favicon when returning tag search results via the API if possible.
    </notes>
   </release>
  </changelog>
